First complete working version. Only with static LNURL

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,15 +15,18 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+board_build.partitions = huge_app.csv
 monitor_speed = 115200
 build_flags = 
 	-Ofast
-	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
+;	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
 	-D LV_CONF_PATH=${platformio.workspace_dir}/../src/lv_conf.h
-	-D TFT_PANEL_ORDER_RGB
+	-D TFT_PANEL_ORDER_BGR
 	-D TFT_ORIENTATION_PORTRAIT
 	-D ESP32_3248S035C
 lib_deps = 
 	rzeldent/esp32_smartdisplay@^1.0.2
 	lvgl/lvgl@^8.3.4
 	madhephaestus/ESP32Servo@^0.12.1
+	links2004/WebSockets@^2.3.7
+	bblanchon/ArduinoJson@^6.20.0
