--- a/platformio.ini
+++ b/platformio.ini
@@ -19,9 +19,8 @@ board_build.partitions = huge_app.csv
 monitor_speed = 115200
 build_flags = 
 	-Ofast
-	-D PLEBTAP_SERVO_PIN=21
-	-D PLEBTAP_RESCUE_PIN=654321 
-	-D PLEBTAP_CONFIG_PIN=123456  
+	-D BIER_SERVO_PIN=21
+	-D CONFIG_PIN=123456  
 ;	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
 	-D LV_CONF_PATH=${platformio.workspace_dir}/../src/lv_conf.h
 	-D TFT_PANEL_ORDER_BGR
