--- a/platformio.ini
+++ b/platformio.ini
@@ -21,8 +21,9 @@ build_flags =
 	-Ofast
 	-D BIER_SERVO_PIN=21
 	-D CONFIG_PIN=123456  
-	-D BB_FGCOLOR=0xEEEEEE
+	-D BB_FGCOLOR=0xFAFAFA
 	-D BB_BGCOLOR=0x02599E
+	-D BB_NAME=\"XAPTAP\"
 ;	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
 	-D LV_CONF_PATH=${platformio.workspace_dir}/../src/lv_conf.h
 	-D TFT_PANEL_ORDER_BGR
