--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,7 @@ build_flags =
 	-D BB_FGCOLOR=0xFAFAFA
 	-D BB_BGCOLOR=0x02599E
 	-D BB_NAME=\"XAPTAP\"
+	-D BB_TFT_INTENSITY=1023
 ;	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
 	-D LV_CONF_PATH=${platformio.workspace_dir}/../src/lv_conf.h
 	-D TFT_PANEL_ORDER_BGR
